Fix boombox image too small for screens over 2K

--- a/website/src/styles/desktop.scss
+++ b/website/src/styles/desktop.scss
@@ -137,7 +137,7 @@ main {
 
 #boombox {
     display: block;
-    max-width: 100%;
+    width: 100%;
     height: auto;
     user-select: none;
     -webkit-user-drag: none;
